docs: update file package.json for deploy

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "Superheros",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://ElenaSinelle.github.io/rhw-2/superheros/",
+  "homepage": "https://ElenaSinelle.github.io/superheros/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
